<resources>
    <string name="app_name" translatable="false">UteNotes</string>
    <string name="creator_name">Made by Parasat Otebay</string>
    <string name="done">Done</string>
    <string name="not_done">Unfinished</string>
    <string name="question">Do you want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="note_title_hint">Title</string>
    <string name="note_desc_hint">Write here…</string>
    <string name="task">Task</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="about">About</string>
</resources>